--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.21.1",
     "buffer": "^6.0.3",
     "compression": "^1.7.4",
+    "csv": "^6.1.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
   }
