--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "16.14.2"
   },
   "scripts": {
-    "start": "node app.js",
-    "build": "cd client && npm install && npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [
     "shipstation",
@@ -19,13 +19,16 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.16"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "body-parser": "^1.20.0",
     "buffer": "^6.0.3",
     "compression": "^1.7.4",
-    "express": "^4.17.1",
+    "csv-parse": "^5.2.0",
+    "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.1"
   }
 }
