--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "buffer": "^6.0.3",
     "compression": "^1.7.4",
     "csv-parse": "^5.2.0",
+    "debug": "^4.3.4",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.1"
