--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "compression": "^1.7.4",
     "csv-parse": "^5.2.0",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.1"
